# microCT-rock-superresolution

./: .gitignore  LICENSE  README.md  pyproject.toml  quick_test.py  requirements.txt
configs/: coifpm_16x.yaml  coifpm_4x.yaml  coifpm_8x.yaml  drsrd1_4x.yaml  quick_test.yaml
docs/: DATA_LAYOUT.md  EXPERIMENTS.md
microct_sr/: augmentation.py  config.py  data.py  engine.py  losses.py  metrics.py  models.py  plotting.py  preprocessing.py  results.py
scripts/: evaluate_bicubic.py  make_demo_data.py  run_coifpm_experiments.py  run_drsrd1_experiments.py  train.py
