[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "microct-rock-superresolution"
version = "1.0.0"
description = "Super-resolution models for micro-CT rock images"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.0.0",
  "numpy>=1.23.0",
  "pillow>=9.0.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.2.0",
  "optuna>=3.0.0",
  "matplotlib>=3.6.0",
  "pandas>=1.5.0"
]

[tool.setuptools]
packages = ["microct_sr"]
